--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>The Brown Bear</h1>
         <h2> The brown bear is a native to ...</h2>
+        <h2 id="learnmore"> learnmore </h2>
         <h3> Here are some bear species:</h3>
         <ul type="circle">
             <li>Arctos</li>
