--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>The Brown Bear</title>
     </head>
     <body>
         <h1>The Brown Bear</h1>
         <h2> The brown bear is a native to ...</h2>
-        <h2 id="learnmore"> learnmore </h2>
+        <a href="learnmore"></a>
+        <h3 id="learnmore"> learnmore </h3>
         <h3> Here are some bear species:</h3>
         <ul type="circle">
             <li>Arctos</li>
