--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <h1>The Brown Bear</h1>
         <h2> The brown bear is a native to ...</h2>
-        <a href="learnmore"></a>
+        <a href="learnmore">
         <h3 id="learnmore"> learnmore </h3>
+        </a>
         <h3> Here are some bear species:</h3>
         <ul type="circle">
             <li>Arctos</li>
