--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>The Brown Bear</h1>
         <h2> The brown bear is a native to ...</h2>
-        <a href="learnmore">
+        <a href="learnmore"> </a>
         <h3 id="learnmore"> learnmore </h3>
-        </a>
+        <p> Bear eat fish eat everything kkkk</p>
         <h3> Here are some bear species:</h3>
         <ul type="circle">
             <li>Arctos</li>
