--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Brown Bear</title>
+        <title>Brown Bear</title>
     </head>
     <body>
         <h1>The Brown Bear</h1>
-        <h2> The brown bear is a native to ...</h2>
-        <a href="learnmore">
-        <h3 id="learnmore"> learnmore </h3>
-        <p> Bear eat fish eat everything kkkk</p>
-        </a>
-        <h3> Here are some bear species:</h3>
-        <ul type="circle">
-            <li>Arctos</li>
-            <li>Collarus</li>
-            <li>Horribilis</li>
-            <li>Nelsoni</li>
-        </ul>
+        <p>
+            <strong>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently
+                "Least Concern". There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear
+            </strong>
+        </p>
+        <p>
+            <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
+        </p>
+        <p>
+            Here are some bear species:
+            <ul>
+                <li>Arctos</li>
+                <li>Collarus</li>
+                <li>Horribilis</li>
+                <li>Nelsoni (extinct)</li>
+            </ul>
+        </p>
+        <p>
+            The following countries have the largest populations of brown bears:
+            <ol>
+                <li>Russia </li>
+                <li>United States</li>
+                <li>Canada</li>
+            </ol>
+        </p>
     </body>
 </html>
