--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>The Brown Bear</h1>
+        <img src="tải xuống.jpeg"> 
         <p>
             <strong>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently
                 "Least Concern". There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear
