--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             </ul>
         </p>
         <p>
-            The following countries have the largest populations of brown bears:
-            <ol> <img src="tải xuống.jpeg">
+            The following countries have the largest populations of brown bears: 
+            <ol> 
                 <li>Russia </li>
                 <li>United States</li>
                 <li>Canada</li>
             </ol>
+            <img src="tải xuống.jpeg" align="right">
         </p>
     </body>
 </html>
