--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
         </p>
         <p>
-            Here are some bear species:
+            Here are some bear species: <img src="tải xuống.jpeg" align="right">
             <ul>
                 <li>Arctos</li>
                 <li>Collarus</li>
@@ -30,7 +30,6 @@
                 <li>United States</li>
                 <li>Canada</li>
             </ol>
-            <img src="tải xuống.jpeg" align="right">
         </p>
     </body>
 </html>
