--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
         </p>
         <p>
-            Here are some bear species: <img src="tải xuống.jpeg" align="right">
+            Here are some bear species: <img src="tải xuống.jpeg" align="right 200">
             <ul>
                 <li>Arctos</li>
                 <li>Collarus</li>
