--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a>
         </p>
         <p>
-            Here are some bear species: <img src="tải xuống.jpeg" align="right 800">
+            Here are some bear species: 
             <ul>
                 <li>Arctos</li>
                 <li>Collarus</li>
@@ -24,7 +24,7 @@
             </ul>
         </p>
         <p>
-            The following countries have the largest populations of brown bears: 
+            The following countries have the largest populations of brown bears: <img src="tải xuống.jpeg">
             <ol> 
                 <li>Russia </li>
                 <li>United States</li>
